# lsp-python-types

./: .gitignore  README  README.md  a.py  download_schemas.py  generate.py  generated_types.py  hello.js  hello.py  language_server.py  lsp_request_context.py  lsp_requests.py  lsp_schema.py  lsp_types.py  lsp_types_legacy.py  lsp_types_sublime_text_33.py  pyproject.toml  request.py  requirements.txt  specification.py  tox.ini  types.py
.github/workflows/: main.yml
lsprotocol/: README.md  lsp.json  lsp.schema.json
tests/: test_enum_generation.py  test_utils_helpers.py
utils/: generate_enumerations.py  generate_notifications.py  generate_requests.py  generate_requests_and_responses.py  generate_structures.py  generate_type_aliases.py  helpers.py
