[project]
name = "lsp-types"
version = "1.0.0"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "typing-extensions",
]

[tool.pyright]
pythonVersion = "3.11"
reportUnusedCallResult = "none"

[[tool.pyright.executionEnvironments]]
root = "generated"
pythonVersion = "3.8"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "COM812",  # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "C901",  # https://docs.astral.sh/ruff/rules/complex-structure/
    "D100",  # https://docs.astral.sh/ruff/rules/undocumented-public-module/#undocumented-public-module-d100
    "D101",  # https://docs.astral.sh/ruff/rules/undocumented-public-class/
    "D102",  # https://docs.astral.sh/ruff/rules/undocumented-public-method/
    "D103",  # https://docs.astral.sh/ruff/rules/undocumented-public-function/
    "D104",  # https://docs.astral.sh/ruff/rules/undocumented-public-package/
    "D203",  # https://docs.astral.sh/ruff/rules/missing-blank-line-after-summary/
    "D205",  # https://docs.astral.sh/ruff/rules/missing-blank-line-after-summary/
    "D212",  # https://docs.astral.sh/ruff/rules/multi-line-summary-first-line/
    "D213",  # https://docs.astral.sh/ruff/rules/multi-line-summary-second-line/
    "D400",  # https://docs.astral.sh/ruff/rules/missing-trailing-period/
    "D415",  # https://docs.astral.sh/ruff/rules/missing-terminal-punctuation/
    "I001",  # https://docs.astral.sh/ruff/rules/unsorted-imports/
    "N801",  # https://docs.astral.sh/ruff/rules/invalid-class-name/
    "PLR0911",  # https://docs.astral.sh/ruff/rules/too-many-return-statements/
    "PLR0912",  # https://docs.astral.sh/ruff/rules/too-many-branches/
    "S310",  # https://docs.astral.sh/ruff/rules/suspicious-url-open-usage/
    "T201",  # https://docs.astral.sh/ruff/rules/print/
    "TRY002",  # https://docs.astral.sh/ruff/rules/raise-vanilla-class/
    "UP037"  # https://docs.astral.sh/ruff/rules/quoted-annotation/
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3
skipsdist = True

[testenv]
deps =
    pyright==1.1.407
    ruff==0.14.14
commands =
    pyright .
    ruff check .
"""
