[project]
name = "lsp-types"
version = "1.0.0"
license = "MIT"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "ruff>=0.15.4",
    "typing-extensions",
]

[tool.pyright]
pythonVersion = "3.13"
reportUnusedCallResult = "none"

[[tool.pyright.executionEnvironments]]
root = "generated"
pythonVersion = "3.8"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.per-file-target-version]
"generated/*.py" = "py38"

[tool.ruff.format]
quote-style = "single"
exclude = [
    "generated/lsp_types.py"
]

[tool.ruff.lint.per-file-ignores]
"generated/custom.py" = [
    "F403",  # https://docs.astral.sh/ruff/rules/undefined-local-with-import-star/
    "F405",  # https://docs.astral.sh/ruff/rules/undefined-local-with-import-star-usage/
]

[tool.ruff.lint.isort]
case-sensitive = false
force-single-line = true
from-first = true
no-sections = true
order-by-type = false
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint]
extend-select = ["ALL"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
ignore = [
    "COM812",  # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "CPY001",  # https://docs.astral.sh/ruff/rules/missing-copyright-notice/
    "C901",  # https://docs.astral.sh/ruff/rules/complex-structure/
    "D100",  # https://docs.astral.sh/ruff/rules/undocumented-public-module/#undocumented-public-module-d100
    "D101",  # https://docs.astral.sh/ruff/rules/undocumented-public-class/
    "D102",  # https://docs.astral.sh/ruff/rules/undocumented-public-method/
    "D103",  # https://docs.astral.sh/ruff/rules/undocumented-public-function/
    "D104",  # https://docs.astral.sh/ruff/rules/undocumented-public-package/
    "D203",  # https://docs.astral.sh/ruff/rules/missing-blank-line-after-summary/
    "D205",  # https://docs.astral.sh/ruff/rules/missing-blank-line-after-summary/
    "D212",  # https://docs.astral.sh/ruff/rules/multi-line-summary-first-line/
    "D213",  # https://docs.astral.sh/ruff/rules/multi-line-summary-second-line/
    "D400",  # https://docs.astral.sh/ruff/rules/missing-trailing-period/
    "D415",  # https://docs.astral.sh/ruff/rules/missing-terminal-punctuation/
    "N801",  # https://docs.astral.sh/ruff/rules/invalid-class-name/
    "PLR0911",  # https://docs.astral.sh/ruff/rules/too-many-return-statements/
    "PLR0912",  # https://docs.astral.sh/ruff/rules/too-many-branches/
    "S310",  # https://docs.astral.sh/ruff/rules/suspicious-url-open-usage/
    "T201",  # https://docs.astral.sh/ruff/rules/print/
    "TRY002",  # https://docs.astral.sh/ruff/rules/raise-vanilla-class/
    "UP037"  # https://docs.astral.sh/ruff/rules/quoted-annotation/
]

[tool.tox]
env_list = ["py3"]
skipsdist = true

[tool.tox.env_run_base]
deps = [
    "pyright==1.1.408",
    "ruff==0.15.0",
]
commands = [
    ["pyright"],
    ["ruff", "check"],
]
